<resources>
    <string name="app_name">I Show</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="emptyString" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">Upload</string>
    <string name="discover">Discover</string>
    <string name="settings">settings</string>
    <string name="user_mentioned_you_in_a_comment">User Mentioned you in a comment</string>
    <string name="welcome_to_i_show">Welcome To I-Show</string>
    <string name="stay_connected_with_your_homies">Stay connected with your Homies</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an Account? <b>Register</b></string>
    <string name="already_have_an_account_logim">Already have an Account? <b>Login</b></string>
    <string name="profession">Profession</string>
    <string name="follow">FOLLOW</string>
    <string name="_0000">0000</string>
    <string name="username">Username</string>
</resources>