<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/baseline_notifications_active_24"/>

    <item
        android:id="@+id/upload"
        android:title="@string/upload"
        android:icon="@drawable/baseline_add_circle_24" />

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_24"/>


</menu>